<resources>
    <string name="app_name">Hollout</string>
    <string name="ad_unit_id">ca-app-pub-9005346464433496/1508382128</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="animated_text_contents_divider">\t| </string>
    <string name="app_intro_message">Connect and Holla people of shared interests and profession around you.</string>
    <string name="start_here">START HERE!</string>
    <string name="it_s_just_15_seconds">It\'s just 15 seconds</string>
    <string name="setup_account">Setup your free personal account to get started.</string>
    <string name="clobb">HOLLO</string>
    <string name="it">UT</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="text_retry">Retry</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1343336622431409</string>
    <string name="fb_login_protocol_scheme">fb1343336622431409</string>
    <string name="create_business_profile">Tap to create your business profile</string>
    <string name="do_you_Hollout_for_business">Do you Hollout for business?</string>
    <string name="signed_in_username">Signed In Username</string>
    <string name="your_businesses">Your Businesses</string>
    <string name="your_favourites">Your Favourites</string>
    <string name="your_reviews">Your Reviews</string>
    <string name="calls">Calls</string>
    <string name="help_and_settings">Help &amp; Settings</string>
    <string name="settings">Settings</string>
    <string name="business_with_Hollout">Business with Hollout</string>
    <string name="search_products_and_services"><font size="20">Search Products &amp; Services</font></string>
    <string name="Hollout">Hollout</string>
    <string name="log_out">Log Out</string>
    <string name="others">Others</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="contact_permission">Allow Hollout to access your contacts</string>
    <string name="sms_permission">Allow Hollout to send and receive one time SMS</string>
    <string name="storage_permission">Allow Hollout to access your storage</string>
    <string name="read_sms_permission">Allow Hollout to send and receive one time SMS</string>
    <string name="location_permission">To enjoy all features of hollout, please allow access to your location.</string>
    <string name="phone_state_permisssion">Allow Hollout to read your phone state.</string>
    <string name="phone_call_permission">Allow Hollout to make a one time phone call</string>
    <string name="phone_camera_permission">Allow Hollout to access your camera</string>
    <string name="record_audio">Allow Hollout to record audio</string>
    <string name="contact_permission_not_granted">Permissions were not granted for Contact</string>
    <string name="storage_permission_not_granted">Permissions were not granted for Storage</string>
    <string name="read_sms_permission_not_granted">Permissions were not granted for Read</string>
    <string name="location_permission_not_granted">Permissions were not granted for Location</string>
    <string name="phone_state_permission_not_granted">Permissions were not granted for Phone state</string>
    <string name="phone_call_permission_not_granted">Permissions were not granted for Phone call</string>
    <string name="phone_camera_permission_not_granted">Permissions were not granted for Camera</string>
    <string name="record_audio_permission_not_granted">Permissions were not granted for Audio recording</string>
    <string name="contact_permission_granted">Contacts Permission have been granted</string>
    <string name="storage_permission_granted">Storage Permissions have been granted</string>
    <string name="read_sms_permission_granted">Read sms Permissions have been granted</string>
    <string name="location_permission_granted">Location Permissions has been granted</string>
    <string name="phone_state_permission_granted">Phone state Permissions has been granted</string>
    <string name="phone_call_permission_granted">Phone call Permission has been granted</string>
    <string name="phone_camera_permission_granted">Camera permission has been granted</string>
    <string name="record_audio_permission_granted">Audio Record permissions has been granted</string>
    <string name="communication">Communication</string>
    <string name="messages">Chats</string>
    <string name="choose_an_account_to_continue_with">Choose an account to continue with</string>
    <string name="options">Options</string>
    <string name="empty" />
    <string name="people">People</string>
    <string name="chats">Chats</string>
    <string name="search">Search</string>
    <string name="hollout_bot">Hollout Bot</string>
    <string name="retry">RETRY</string>
    <string name="screwed_data_error_message">Something screwy happened. Please review your data connection</string>
    <string name="we_would_never_post_on_your_time_line">We will never post to your timeline</string>
    <string name="btn_text_login_fb">Log In with Facebook</string>
    <string name="btn_text_login_google">Sign in with Google</string>
    <string name="may_we_know_you_please">May we know you please</string>
    <string name="login">LOGIN</string>
    <string name="find_amp_chat_nwith_your_friends"><![CDATA[Find & Chat  \n with Your friends]]></string>
    <string name="meet_new_people">Meet New People Here!</string>
    <string name="All_categories">Feed Categories</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="content_description_open_navigation_drawer">Drawer Open</string>
    <string name="content_description_close_navigation_drawer">Drawer Close</string>
    <string name="notifications">Notifications</string>
    <string name="your_profile">Your Profile</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="feed_categories">Feed Categories</string>
    <string name="theme">Theme</string>
    <string name="unlike">Unlike</string>
    <string name="you_and"> You and </string>
    <string name="you">You</string>
    <string name="around_you">around you</string>
    <string name="i_am">I am a/an</string>
    <string name="accountant">E.g Accountant</string>
    <string name="continue_">Continue </string>
    <string name="about_you_please">About You Please</string>
    <string name="describe_yourself">Please, more about you using only KEYWORDS---E.g Pharmacist</string>
    <string name="about_you">About You</string>
    <string name="tap_kinds_of_people_">Tap all kinds of people you like to meet</string>
    <string name="search_here">Search here</string>
    <string name="meet_people">Meet People</string>
    <string name="tap_all_kinds_of_people_you_like_to_meet">Tap all kinds of people you like to meet in your current location</string>
    <string name="no_result_found_for_kind_search">Sorry, no result found</string>
    <string name="selected">SELECTED</string>
    <string name="anyone">Anyone</string>
    <string name="text_size_default">14</string>
    <string name="only_closebies">Only Closebies</string>
    <string name="only_chats">Only Chats</string>
    <string name="visible_to_only_me">Only me</string>
    <string name="hey_there_holla_me_on_hollout">Hey there, holla me.</string>
    <string name="chat">CHAT</string>
    <string name="full_info">VIEW PROFILE</string>
    <string name="UPLOAD">UPLOAD</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="upload_new_photo_first">You need to upload at least a profile photo before you can start a chat</string>
    <string name="no_people">No hollout user of shared interests/profession is close to you now, but we\'ll keep checking</string>
    <string name="profile">Profile</string>
    <string name="review_network">Review Data</string>
    <string name="people_unavailable">No one is currently near you. But we\'ll keep checking.</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="_16">16</string>
    <string name="yrs">Yrs</string>
    <string name="you_are">You are</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feeds">Feed</string>
    <string name="meet_more_people">MEET MORE PEOPLE</string>
    <string name="online_status">Online Status</string>
    <string name="featured_photos">FEATURED PHOTOS</string>
    <string name="edit">EDIT</string>
    <string name="location_visibility_contract">If you don\'t want other users to see your location. You won\'t see theirs as well.</string>
    <string name="last_seen_visibility_contract_msg">If you don\'t want other users to see your last seen. You won\'t see theirs as well</string>
    <string name="status_visibility_contract_msg">If you don\'t want others to see your status. You won\'t see theirs as well.</string>
    <string name="age_visibility_contract_msg">If you don\'t want other users to see your age. You won\'t see theirs too</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="chats_and_calls_settings"><![CDATA[Chats & Calls Settings]]></string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="support_and_about_settings">Support Settings</string>
    <string name="your_status">Your status</string>
    <string name="share_plans_ideas_or_your_mood">Share plans, ideas or your mood</string>
    <string name="status_would_be_very_visible_to_everyone">Your status would be visible to anyone on hollout that views your profile</string>
    <string name="attachment_type_selector__image_description">Image</string>
    <string name="attachment_type_selector__audio_description">Audio</string>
    <string name="attachment_type_selector__video_description">Video</string>
    <string name="attachment_type_selector__camera_description">Camera</string>
    <string name="attachment_type_selector__location">Location</string>
    <string name="attachment_type_selector__location_description">Location</string>
    <string name="attachment_type_selector__gif">GIF</string>
    <string name="attachment_type_selector__gif_description">Gif</string>
    <string name="attachment_type_selector__drawer_description">Toggle attachment drawer</string>
    <string name="gallery">Gallery</string>
    <string name="attachment_document">Document</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="contact">Contact</string>
    <string name="search_messages">Search messages</string>
    <string name="view_shared_media">View shared media</string>
    <string name="block_user">Block user</string>
    <string name="view_profile_info">View Profile</string>
    <string name="call">Call</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="filter_people">Filter People</string>
    <string name="males_only">Males only</string>
    <string name="females_only">Females Only</string>
    <string name="both">Both</string>
    <string name="start_age">Start Age</string>
    <string name="to">TO</string>
    <string name="end_age">End Age</string>
    <string name="gender_filter">Gender Filter</string>
    <string name="age_filter">Age Filter</string>
    <string name="empty_content" />
    <string name="search_gifs">Search Gifs</string>
    <string name="powered_by_giphy">Powered By GIPHY</string>
</resources>