<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/place_call"
        android:icon="@drawable/ic_phone_white_24dp"
        android:title="@string/call"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/search_chats"
        android:title="@string/search_messages"
        app:showAsAction="never" />

    <item
        android:id="@+id/view_profile_info"
        android:title="@string/view_profile_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/view_shared_media"
        android:title="@string/view_shared_media"
        app:showAsAction="never" />

    <item
        android:id="@+id/block_user"
        android:title="@string/block_user"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_conversation"
        android:title="@string/delete_conversation"
        app:showAsAction="never" />

</menu>