<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:title="@string/search"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/filter_people"
        android:title="@string/filter_people" />

    <item
        android:id="@+id/button_continue"
        android:title="@string/continue_"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/button_view_profile"
        android:title="@string/view_profile_info"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/invite_friends"
        android:title="@string/invite_friends"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/log_out"
        android:title="@string/log_out"
        android:visible="false"
        app:showAsAction="never" />

    <!--<item-->
    <!--android:id="@+id/create_new_group"-->
    <!--android:title="@string/create_new_group"-->
    <!--app:showAsAction="never" />-->

</menu>
