<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <com.wan.hollout.ui.widgets.HolloutTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingEnd="12dp"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:text="@string/gender_filter"
        android:textColor="@color/text_black"
        app:textStyle="medium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/light_gray" />

    <RadioGroup
        android:id="@+id/gender_filter_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/males_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/males_only" />

        <RadioButton
            android:id="@+id/females_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/females_only" />

        <RadioButton
            android:id="@+id/both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both" />

    </RadioGroup>

    <com.wan.hollout.ui.widgets.HolloutTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingEnd="12dp"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingTop="24dp"
        android:text="@string/age_filter"
        android:textColor="@color/text_black"
        app:textStyle="medium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/light_gray" />

    <RelativeLayout
        android:id="@+id/age_filter_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/start_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="16dp"
            android:gravity="center_horizontal"
            android:background="@drawable/blue_grey_thin_edit_text_bg"
            android:hint="@string/start_age"
            android:textSize="13sp"
            android:textColorHint="@color/light_grey"
            android:inputType="phone" />

        <com.wan.hollout.ui.widgets.HolloutTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:layout_centerInParent="true"
            android:paddingTop="16dp"
            android:textColor="@color/ease_gray"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/end_age"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/blue_grey_thin_edit_text_bg"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:textColorHint="@color/light_grey"
            android:hint="@string/end_age"
            android:inputType="phone"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</LinearLayout>